crates/musli-tests/tests/ui/custom_decoder_error.stderr
error: expected identifier
 --> tests/ui/custom_decoder_error.rs:5:20
  |
5 |     #[musli(with = "bytes")]
  |                    ^^^^^^^
